# geo_odk_streamlit

./: README.md  odk_to_geo_streamlit.py  page1.py  pyproject.toml  requirements.txt  test_for_app_-_all_versions_-_False_-_2024-10-27-09-02-10.xlsx
.devcontainer/: devcontainer.json
notebook/: odk_to_geo.ipynb
