[project]
name = "geo-odk-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "fabienpgt",email = "fabien.pageot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fiona (>=1.10.1,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
